--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW_SYSX/SWFW_SYSX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW_SYSX/SWFW_SYSX.cshtml
@@ -88,58 +88,22 @@
                     <div id="divBTTip"></div>
                 </div>
             </div>
-        <div id="divSYSXLB" class="div_row" style="z-index: 999;">
-            <div class="div_row_left" style="margin-left: 128px;">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">类别</span>
-            </div>
-            <div class="div_row_right">
-                <div id="divLBText" class="div_select_out SRK" style="position: relative;">
-                    <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="divSYLX" class="div_row" style="z-index: 998; display: none;">
-            <div class="div_row_left">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">摄影类型</span>
-            </div>
-            <div class="div_row_right">
-                <div class="div_radio" id="div_sylx_cpsy">
-                    <img class="img_radio" id="img_sylx_cpsy" /><label class="label_radio">产品摄影</label>
-                </div>
-                <div class="div_radio" id="div_sylx_hdhysy">
-                    <img class="img_radio" id="img_sylx_hdhysy" /><label class="label_radio">活动/会议摄影</label>
-                </div>
-                <div class="div_radio" id="div_sylx_qyxcsy">
-                    <img class="img_radio" id="img_sylx_qyxcsy" /><label class="label_radio">企业宣传摄影</label>
-                </div>
-                <div class="div_radio" id="div_sylx_hjjzsy">
-                    <img class="img_radio" id="img_sylx_hjjzsy" /><label class="label_radio">环境/建筑摄影</label>
-                </div>
-            </div>
-        </div>
-            <div id="divSLLX" class="div_row" style="z-index: 997; display: none;">
-                <div class="div_row_left">
+            <div id="divOUTLB" class="div_row" style="z-index: 999;">
+                <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
-                    <span class="spanFWCZ">摄录类型</span>
+                    <span class="spanFWCZ">类别</span>
                 </div>
                 <div class="div_row_right">
-                    <div class="div_radio" id="div_sllx_gr">
-                        <img class="img_radio" id="img_sllx_gr" /><label class="label_radio">会议摄像</label>
-                    </div>
-                    <div class="div_radio" id="div_sllx_ql">
-                        <img class="img_radio" id="img_sllx_ql" /><label class="label_radio">晚会/活动摄像</label>
-                    </div>
-                    <div class="div_radio" id="div_sllx_yf">
-                        <img class="img_radio" id="img_sllx_yf" /><label class="label_radio">企业形象/宣传</label>
+                    <div id="divLBText" class="div_select_out SRK" style="position: relative;">
+                        <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                            <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
+                            <div class="span_select_arrow"></div>
+                        </div>
+                        <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
                     </div>
                 </div>
+                <div id="divOUTLBTip"></div>
             </div>
             <div id="divYLGZS" class="div_row" style="z-index: 996; display: none;">
                 <div class="div_row_left" style="margin-left: 82px;">
@@ -148,12 +112,13 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_ylgzs_sygzs">
-                        <img class="img_radio" id="img_ylgzs_sygzs" /><label class="label_radio">摄影工作室</label>
+                        <img class="img_radio" id="img_ylgzs_sygzs"/><label class="label_radio">摄影工作室</label>
                     </div>
                     <div class="div_radio" id="div_ylgzs_yl">
-                        <img class="img_radio" id="img_ylgzs_yl" /><label class="label_radio">影楼</label>
+                        <img class="img_radio" id="img_ylgzs_yl"/><label class="label_radio">影楼</label>
                     </div>
                 </div>
+                <div id="divYLGZSTip"></div>
             </div>
             <div id="divXZLX" class="div_row" style="z-index: 995; display: none;">
                 <div class="div_row_left">
@@ -162,18 +127,19 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_xzlx_gr">
-                        <img class="img_radio" id="img_xzlx_gr" /><label class="label_radio">个人</label>
+                        <img class="img_radio" id="img_xzlx_gr"/><label class="label_radio">个人</label>
                     </div>
                     <div class="div_radio" id="div_xzlx_ql">
-                        <img class="img_radio" id="img_xzlx_ql" /><label class="label_radio">情侣</label>
+                        <img class="img_radio" id="img_xzlx_ql"/><label class="label_radio">情侣</label>
                     </div>
                     <div class="div_radio" id="div_xzlx_yf">
-                        <img class="img_radio" id="img_xzlx_yf" /><label class="label_radio">孕妇</label>
+                        <img class="img_radio" id="img_xzlx_yf"/><label class="label_radio">孕妇</label>
                     </div>
                     <div class="div_radio" id="div_xzlx_dr">
-                        <img class="img_radio" id="img_xzlx_dr" /><label class="label_radio">多人</label>
+                        <img class="img_radio" id="img_xzlx_dr"/><label class="label_radio">多人</label>
                     </div>
                 </div>
+                <div id="divXZLXTip"></div>
             </div>
             <div id="divSYSXNLD" class="div_row" style="z-index: 994; display: none;">
                 <div class="div_row_left" style="margin-left: 114px;">
@@ -190,6 +156,46 @@
                         </div>
                     </div>
                 </div>
+                <div id="divSYSXNLDTip"></div>
+            </div>
+            <div id="divSYLX" class="div_row" style="z-index: 998; display: none;">
+                <div class="div_row_left">
+                    <span class="span_required">*</span>
+                    <span class="spanFWCZ">摄影类型</span>
+                </div>
+                <div class="div_row_right">
+                    <div class="div_radio" id="div_sylx_cpsy">
+                        <img class="img_radio" id="img_sylx_cpsy" /><label class="label_radio">产品摄影</label>
+                    </div>
+                    <div class="div_radio" id="div_sylx_hdhysy">
+                        <img class="img_radio" id="img_sylx_hdhysy" /><label class="label_radio">活动/会议摄影</label>
+                    </div>
+                    <div class="div_radio" id="div_sylx_qyxcsy">
+                        <img class="img_radio" id="img_sylx_qyxcsy" /><label class="label_radio">企业宣传摄影</label>
+                    </div>
+                    <div class="div_radio" id="div_sylx_hjjzsy">
+                        <img class="img_radio" id="img_sylx_hjjzsy" /><label class="label_radio">环境/建筑摄影</label>
+                    </div>
+                </div>
+                <div id="divSYLXTip"></div>
+            </div>
+            <div id="divSLLX" class="div_row" style="z-index: 997; display: none;">
+                <div class="div_row_left">
+                    <span class="span_required">*</span>
+                    <span class="spanFWCZ">摄录类型</span>
+                </div>
+                <div class="div_row_right">
+                    <div class="div_radio" id="div_sllx_gr">
+                        <img class="img_radio" id="img_sllx_gr"/><label class="label_radio">会议摄像</label>
+                    </div>
+                    <div class="div_radio" id="div_sllx_ql">
+                        <img class="img_radio" id="img_sllx_ql"/><label class="label_radio">晚会/活动摄像</label>
+                    </div>
+                    <div class="div_radio" id="div_sllx_yf">
+                        <img class="img_radio" id="img_sllx_yf"/><label class="label_radio">企业形象/宣传</label>
+                    </div>
+                </div>
+                <div id="divSLLXTip"></div>
             </div>
             <div id="divPSDD" class="div_row" style="z-index: 993; display: none;">
                 <div class="div_row_left">
@@ -198,12 +204,13 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_psdd_cnj">
-                        <img class="img_radio" id="img_psdd_cnj" /><label class="label_radio">纯内景</label>
+                        <img class="img_radio" id="img_psdd_cnj"/><label class="label_radio">纯内景</label>
                     </div>
                     <div class="div_radio" id="div_psdd_nwj">
-                        <img class="img_radio" id="img_psdd_nwj" /><label class="label_radio">内/外景</label>
+                        <img class="img_radio" id="img_psdd_nwj"/><label class="label_radio">内/外景</label>
                     </div>
                 </div>
+                <div id="divPSDDTip"></div>
             </div>
             <div id="divSYSXPSFG" class="div_row" style="z-index: 992; display: none;">
                 <div class="div_row_left">
@@ -220,6 +227,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divSYSXPSFGTip"></div>
             </div>
             <div id="divFZTS" class="div_row" style="z-index: 991; display: none;">
                 <div class="div_row_left">
@@ -241,12 +249,13 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_fzpssf_s">
-                        <img class="img_radio" id="img_fzpssf_s" /><label class="label_radio">是</label>
+                        <img class="img_radio" id="img_fzpssf_s"/><label class="label_radio">是</label>
                     </div>
                     <div class="div_radio" id="div_fzpssf_f">
-                        <img class="img_radio" id="img_fzpssf_f" /><label class="label_radio">否</label>
+                        <img class="img_radio" id="img_fzpssf_f"/><label class="label_radio">否</label>
                     </div>
                 </div>
+                <div id="divFZPSSFTip"></div>
             </div>
             <div id="divTXDPS" class="div_row" style="z-index: 989; display: none;">
                 <div class="div_row_left" style="margin-left: 86px;">
@@ -281,12 +290,13 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_jxkpzs_s">
-                        <img class="img_radio" id="img_jxkpzs_s" /><label class="label_radio">是</label>
+                        <img class="img_radio" id="img_jxkpzs_s"/><label class="label_radio">是</label>
                     </div>
                     <div class="div_radio" id="div_jxkpzs_f">
-                        <img class="img_radio" id="img_jxkpzs_f" /><label class="label_radio">否</label>
+                        <img class="img_radio" id="img_jxkpzs_f"/><label class="label_radio">否</label>
                     </div>
                 </div>
+                <div id="divJXKPZSTip"></div>
             </div>
             <div id="divDPZS" class="div_row" style="z-index: 986; display: none;">
                 <div class="div_row_left">
@@ -295,12 +305,13 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_dpzs_s">
-                        <img class="img_radio" id="img_dpzs_s" /><label class="label_radio">是</label>
+                        <img class="img_radio" id="img_dpzs_s"/><label class="label_radio">是</label>
                     </div>
                     <div class="div_radio" id="div_dpzs_f">
-                        <img class="img_radio" id="img_dpzs_f" /><label class="label_radio">否</label>
+                        <img class="img_radio" id="img_dpzs_f"/><label class="label_radio">否</label>
                     </div>
                 </div>
+                <div id="divDPZSTip"></div>
             </div>
             <div id="divJPSF" class="div_row" style="z-index: 985; display: none;">
                 <div class="div_row_left">
@@ -309,12 +320,13 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_jpsf_s">
-                        <img class="img_radio" id="img_jpsf_s" /><label class="label_radio">是</label>
+                        <img class="img_radio" id="img_jpsf_s"/><label class="label_radio">是</label>
                     </div>
                     <div class="div_radio" id="div_jpsf_f">
-                        <img class="img_radio" id="img_jpsf_f" /><label class="label_radio">否</label>
+                        <img class="img_radio" id="img_jpsf_f"/><label class="label_radio">否</label>
                     </div>
                 </div>
+                <div id="divJPSFTip"></div>
             </div>
             <div id="divJDSF" class="div_row" style="z-index: 984; display: none;">
                 <div class="div_row_left">
@@ -323,12 +335,13 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_jdsf_s">
-                        <img class="img_radio" id="img_jdsf_s" /><label class="label_radio">是</label>
+                        <img class="img_radio" id="img_jdsf_s"/><label class="label_radio">是</label>
                     </div>
                     <div class="div_radio" id="div_jdsf_f">
-                        <img class="img_radio" id="img_jdsf_f" /><label class="label_radio">否</label>
+                        <img class="img_radio" id="img_jdsf_f"/><label class="label_radio">否</label>
                     </div>
                 </div>
+                <div id="divJDSFTip"></div>
             </div>
             <div id="divTXXCSL" class="div_row" style="z-index: 983; display: none;">
                 <div class="div_row_left" style="margin-left: 72px;">
@@ -437,16 +450,16 @@
                     <span class="spanFWCZ">详细地址</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -454,8 +467,9 @@
                         <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
                 </div>
+                <div id="divSZQYTip"></div>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 990">
                 <div class="div_row_left" style="margin-left: 114px;">
