--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_GLPX/JYPX_GLPX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_GLPX/JYPX_GLPX.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_GLPX";
+    ViewBag.Title = "JYPX_GLPX";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
