--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_ITPX/JYPX_ITPX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_ITPX/JYPX_ITPX.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_ITPX";
+    ViewBag.Title = "JYPX_ITPX";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
