--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_PBPK/JYPX_PBPK.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_PBPK/JYPX_PBPK.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_PBPK";
+    ViewBag.Title = "JYPX_PBPK";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
