--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_SJPX/JYPX_SJPX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_SJPX/JYPX_SJPX.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_SJPX";
+    ViewBag.Title = "JYPX_SJPX";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
