--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_TYJL/JYPX_TYJL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_TYJL/JYPX_TYJL.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_TYJL";
+    ViewBag.Title = "JYPX_TYJL";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
