--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_TYPX/JYPX_TYPX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_TYPX/JYPX_TYPX.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_TYPX";
+    ViewBag.Title = "JYPX_TYPX";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
