--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YSPXJS/JYPX_YSPXJS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YSPXJS/JYPX_YSPXJS.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_YSPXJS";
+    ViewBag.Title = "JYPX_YSPXJS";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
