--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YYEJY/JYPX_YYEJY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YYEJY/JYPX_YYEJY.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_YYEJY";
+    ViewBag.Title = "JYPX_YYEJY";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
