--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YYPXJS/JYPX_YYPXJS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YYPXJS/JYPX_YYPXJS.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_YYPXJS";
+    ViewBag.Title = "JYPX_YYPXJS";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
