--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_ZXXFDB/JYPX_ZXXFDB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_ZXXFDB/JYPX_ZXXFDB.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_ZXXFDB";
+    ViewBag.Title = "JYPX_ZXXFDB";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
