--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_ZXXYDY/JYPX_ZXXYDY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_ZXXYDY/JYPX_ZXXYDY.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_ZXXYDY";
+    ViewBag.Title = "JYPX_ZXXYDY";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
