--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_ZYJNPX/JYPX_ZYJNPX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_ZYJNPX/JYPX_ZYJNPX.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_ZYJNPX";
+    ViewBag.Title = "JYPX_ZYJNPX";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
