--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_JJJG/JYPX_JJJG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_JJJG/JYPX_JJJG.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_JJJG";
+    ViewBag.Title = "JYPX_JJJG";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
@@ -105,9 +105,10 @@
                         <img class="img_radio" id="img_sf_wj"/><label class="label_radio">外教</label>
                     </div>
                     <div id="div_sf_qt" class="div_radio">
-                        <img class="img_radio" id="img_sf_qt" /><label class="label_radio">其他</label>
+                        <img class="img_radio" id="img_sf_qt"/><label class="label_radio">其他</label>
                     </div>
                 </div>
+                <div id="divSFTip"></div>
             </div>
             <div id="divFDJD" class="div_row" style="z-index: 997;">
                 <div class="div_row_left">
@@ -116,6 +117,7 @@
                 </div>
                 <div id="divFDJDText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divFDJDTip"></div>
             </div>
             <div id="divFDKM" class="div_row" style="z-index: 997;">
                 <div class="div_row_left">
@@ -124,6 +126,7 @@
                 </div>
                 <div id="divFDKMText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divFDKMTip"></div>
             </div>
             <div id="divFWQY" class="div_row" style="z-index: 996">
                 <div class="div_row_left">
@@ -189,16 +192,16 @@
                     <span class="spanFWCZ">详细地址</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -206,11 +209,12 @@
                         <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
                 </div>
+                <div id="divSZQYTip"></div>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 990">
-                <div class="div_row_left">
+                <div class="div_row_left" style="margin-left: 114px;">
                     <span class="span_required">*</span>
                     <span id="spanLXDH">联系人</span>
                 </div>
