--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_XLJY/JYPX_XLJY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_XLJY/JYPX_XLJY.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_XLJY";
+    ViewBag.Title = "JYPX_XLJY";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
