--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YM/JYPX_YM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YM/JYPX_YM.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_YM";
+    ViewBag.Title = "JYPX_YM";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
