--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YYPXJG/JYPX_YYPXJG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YYPXJG/JYPX_YYPXJG.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXJYPX_YYPXJG";
+    ViewBag.Title = "JYPX_YYPX";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
@@ -88,7 +88,7 @@
                     <div id="divBTTip"></div>
                 </div>
             </div>
-            <div id="divYYPXJGYZ" class="div_row" style="z-index: 999">
+            <div id="divYYPXYZ" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">语种</span>
@@ -96,7 +96,7 @@
                 <div class="div_row_right">
                     <div id="divYZText" class="div_select_out SRK" style="position: relative;">
                         <div id="divYZSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="LBID" />
+                            <input type="hidden" id="LBID"/>
                             <span id="spanYZ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -104,6 +104,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divYYPXYZTip"></div>
             </div>
             <div id="divXL" class="div_row" style="z-index: 998; display: none;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -112,6 +113,7 @@
                 </div>
                 <div id="divXLText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divXLTip"></div>
             </div>
             <div id="divZX" class="div_row" style="z-index: 997;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -193,16 +195,16 @@
                     <span class="spanFWCZ">详细地址</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -210,8 +212,9 @@
                         <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
                 </div>
+                <div id="divSZQYTip"></div>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 990">
                 <div class="div_row_left" style="margin-left: 114px;">
