--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YSPXJS/JYPX_YSPXJS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YSPXJS/JYPX_YSPXJS.cshtml
@@ -105,15 +105,16 @@
                 </div>
                 <div class="div_row_right">
                     <div id="div_sf_dxs" class="div_radio">
-                        <img class="img_radio" id="img_ysfw_dxs" /><label class="label_radio">大学生</label>
+                        <img class="img_radio" id="img_ysfw_dxs"/><label class="label_radio">大学生</label>
                     </div>
                     <div id="div_sf_zxjs" class="div_radio">
-                        <img class="img_radio" id="img_sf_zxjs" /><label class="label_radio">在校教师</label>
+                        <img class="img_radio" id="img_sf_zxjs"/><label class="label_radio">在校教师</label>
                     </div>
                     <div id="div_sf_zzjs" class="div_radio">
-                        <img class="img_radio" id="img_sf_zzjs" /><label class="label_radio">专职教师</label>
+                        <img class="img_radio" id="img_sf_zzjs"/><label class="label_radio">专职教师</label>
                     </div>
                 </div>
+                <div id="divSFTip"></div>
             </div>
             <div id="divJL" class="div_row" style="margin-top: 22px;">
                 <div class="div_row_left" style="margin-left: 128px;">
