--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YYPXJS/JYPX_YYPXJS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YYPXJS/JYPX_YYPXJS.cshtml
@@ -84,7 +84,7 @@
                     <span id="spanBT">标题</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="BT" maxlength="50" column="BT" class="span_spaninput SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔"/>
+                    <input id="BT" maxlength="50" column="BT" class="input_input SRK" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔"/>
                     <div id="divBTTip"></div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                     <span id="spanXM">姓名</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="XM" maxlength="50" column="XM" class="span_spaninput SRK" style="padding: 6px 12px; width: 150px; color: #999999" type="text" placeholder="请输入姓名"/>
+                    <input id="XM" maxlength="50" column="XM" class="input_input SRK" style="width: 150px;" type="text" placeholder="请输入姓名"/>
                     <div id="divXMTip"></div>
                 </div>
             </div>
@@ -105,18 +105,19 @@
                 </div>
                 <div class="div_row_right">
                     <div id="div_sf_dxs" class="div_radio">
-                        <img class="img_radio" id="img_ysfw_dxs" /><label class="label_radio">大学生</label>
+                        <img class="img_radio" id="img_ysfw_dxs"/><label class="label_radio">大学生</label>
                     </div>
                     <div id="div_sf_zxjs" class="div_radio">
-                        <img class="img_radio" id="img_sf_zxjs" /><label class="label_radio">在校教师</label>
+                        <img class="img_radio" id="img_sf_zxjs"/><label class="label_radio">在校教师</label>
                     </div>
                     <div id="div_sf_zzjs" class="div_radio">
-                        <img class="img_radio" id="img_sf_zzjs" /><label class="label_radio">专职教师</label>
+                        <img class="img_radio" id="img_sf_zzjs"/><label class="label_radio">专职教师</label>
                     </div>
                     <div id="div_sf_wj" class="div_radio">
-                        <img class="img_radio" id="img_sf_wj" /><label class="label_radio">外教</label>
+                        <img class="img_radio" id="img_sf_wj"/><label class="label_radio">外教</label>
                     </div>
                 </div>
+                <div id="divSFTip"></div>
             </div>
             <div id="divYYPXJSJXKM" class="div_row" style="z-index: 999">
                 <div class="div_row_left">
@@ -134,6 +135,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divYYPXJSJXKMTip"></div>
             </div>
             <div id="divJBSP" class="div_row" style="margin-top: 22px;">
                 <div class="div_row_left">
@@ -141,7 +143,7 @@
                     <span id="spanJBSP">级别水平</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="JBSP" maxlength="50" column="JBSP" class="span_spaninput SRK" style="padding: 6px 12px; width: 150px; color: #999999" type="text" placeholder="请输入级别水平" />
+                    <input id="JBSP" maxlength="50" column="JBSP" class="input_input SRK" style=" width: 150px;" type="text" placeholder="请输入级别水平" />
                     <div id="divJBSPTip"></div>
                 </div>
             </div>
